# libmonoAtomic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/monoAtomic/: maAudioChannel.h  maAudioFile.h  maDefs.h  maExceptions.h  maMatrix.h  maUtils.h  monoAtomic.h
include/monoAtomic/devices/: maAudioDeviceBase.h  maAudioDevicePortaudio.h
include/monoAtomic/formats/: maAudioFileWave.h
tests/: CMakeLists.txt  build_tests.sh  test_maAudioDevicePortAudio.cpp  test_maAudiofileWave.cpp  test_maMatrix  test_maMatrix.cpp  test_openmp  test_openmp.cpp
